--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,4 @@ plugins:
 
 
 title: Asha Empire Online
+description: Get ready for the ultimate sci-fi gaming experience as you step into the world of the Asha Empire.
