--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: kramdown
 remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
 - jekyll-remote-theme
-
+google_analytics: G-NHDCW35LLY
 
 title: Asha Empire Online
 description: Get ready for the ultimate sci-fi gaming experience as you step into the world of the Asha Empire.
